# monads-tf

./: .gitignore  cabal.haskell-ci
.github/workflows/: haskell-ci.yml
demo/: demo.cabal
monads-tf/: monads-tf.cabal
