cabal-version: 3.0

name: demo
version: 0

tested-with:
   GHC == 9.12.0
   GHC == 9.10.1
   GHC == 9.8.2
   GHC == 9.6.6
   GHC == 9.4.8
   GHC == 9.2.8

common base
  default-language: GHC2021
  ghc-options: -Wall
  build-depends:
    , base ^>= 4.16 || ^>= 4.17 || ^>= 4.18 || ^>= 4.19 || ^>= 4.20 || ^>= 4.21
    , monads-tf
  default-extensions:
    TypeFamilies

executable demo-except-1
  import: base
  hs-source-dirs: except-1
  main-is: Main.hs

executable demo-except-2
  import: base
  hs-source-dirs: except-2
  main-is: Main.hs
